fixed problem white system bar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
             android:name=".AdviceActivity"
             android:label="@string/title_activity_advice"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".AdviceEntryActivity"></activity>
+        <activity android:name=".AdviceEntryActivity" />
+        <activity android:name=".AdviceActivity2"></activity>
     </application>
 
 </manifest>
