--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="be.mhealth.quantifiedhealth" >
+    package="be.mhealth.quantifiedhealth">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -21,40 +21,43 @@
         <activity
             android:name=".BenchmarkActivity"
             android:label="@string/title_activity_benchmark"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".ProfileSettingsActivity">
-            <intent-filter>
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".QuestionnaireHotFlashesActivity"
-            android:label="@string/title_activity_questionnaire"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".QuestionnaireInsomniaActivity"
-            android:label="@string/title_activity_questionnaire"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity android:name=".QuestionnaireHeadachesActivity"
-            android:label="@string/title_activity_questionnaire"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity android:name=".QuestionnaireUrinaryIncontinenceActivity"
-            android:label="@string/title_activity_questionnaire"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ProfileSettingsActivity">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".QuestionnaireHotFlashesActivity"
+            android:label="@string/title_activity_questionnaire"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".QuestionnaireInsomniaActivity"
+            android:label="@string/title_activity_questionnaire"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".QuestionnaireHeadachesActivity"
+            android:label="@string/title_activity_questionnaire"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".QuestionnaireUrinaryIncontinenceActivity"
+            android:label="@string/title_activity_questionnaire"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ProfileSettingsActivity">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity android:name=".AdviceEntryActivity" />
-        <activity android:name=".AdviceActivity"></activity>
+        <activity android:name=".AdviceActivity" />
+        <activity android:name=".DiaryActivity"></activity>
     </application>
 
 </manifest>
